# edms-examples

./: .gitignore  LICENSE  README.md
.github/: CODE_OF_CONDUCT.md
basic_development_workflow/: .gitignore  CMakeLists.txt  conanfile.py  readme.md
basic_development_workflow/activities/: Consumer.activity.yaml  Producer.activity.yaml
basic_development_workflow/deployment/: CMakeLists.txt  Deployment.deploy.yaml  HelloWorld.activity_graph.yaml
basic_development_workflow/docs/: 2-develop.md  3-vscode.md  4-build.md  5-visualize.md  6-run.md  7-record.md  8-analyze.md  9-recompute.md
basic_development_workflow/interfaces/: CMakeLists.txt  ExampleInterfaces.interfaces.yaml
basic_development_workflow/interfaces/interfaces_include/example_interfaces/: message.hpp
basic_development_workflow/runnables/: Consumer.runnable.yaml  Producer.runnable.yaml
basic_development_workflow/runnables/runnables_include/example_runnables/: internal_state.hpp
basic_development_workflow/runnables/src/: consumer.cpp  producer.cpp
basic_development_workflow/yaaa_json_schema/: activity_graph_schema.json  activity_schema.json  carma_0_22_deploy_schema.json  deploy_schema.json  ecu_schema.json  ee_interfaces_schema.json  ee_system_schema.json  gateway_schema.json  hypervisor_schema.json  interface_group_schema.json  interfaces_schema.json  linux_schema.json  noviroc_deploy_schema.json  parameter_instance_schema.json  parameter_interface_schema.json  qnx_schema.json  runnable_schema.json  setting.json  soc_schema.json  switch_schema.json  transport_protocol_schema.json
ros2edms/: README.md
ros2edms/concepts/: README.md
ros2edms/concepts/Execution_Management/: README.md
ros2edms/concepts/Memory_Resources/: README.md
ros2edms/concepts/Nodes_vs_Activities_&_Runnables/: README.md
ros2edms/concepts/Parameters/: README.md
ros2edms/concepts/Software_Architecture_Middleware_Abstraction/: README.md
ros2edms/concepts/Topics_vs_Interfaces/: README.md
ros2edms/how_to_guides/: README.md
ros2edms/how_to_guides/How_to_Enable_Multithreading/: README.md
ros2edms/how_to_guides/How_to_Show_Total_Memory_Consumption/: README.md
ros2edms/how_to_guides/How_to_Show_Visualization/: README.md
ros2edms/how_to_guides/How_to_Switch_Off_Logging/: README.md
ros2edms/installation/: README.md
ros2edms/installation/EDMS/: README.md
ros2edms/installation/ROS2/: README.md
ros2edms/tutorials/: README.md
ros2edms/tutorials/Communication_Latency/: README.md  vis.py
ros2edms/tutorials/Communication_Latency/Communication_Latency_EDMS/: CMakeLists.txt  Results_EDMS_interprocess.txt  conanfile.py
ros2edms/tutorials/Communication_Latency/Communication_Latency_EDMS/activities/: CMakeLists.txt  Intraprocess.activity.yaml  Producer.activity.yaml  Subtractor.activity.yaml
ros2edms/tutorials/Communication_Latency/Communication_Latency_EDMS/deployment/: CMakeLists.txt  Interprocess.activity_graph.yaml  Intraprocess.activity_graph.yaml
ros2edms/tutorials/Communication_Latency/Communication_Latency_EDMS/interfaces/: CMakeLists.txt  Message.interfaces.yaml
ros2edms/tutorials/Communication_Latency/Communication_Latency_EDMS/interfaces/interfaces_include/interfaces/: message.hpp
ros2edms/tutorials/Communication_Latency/Communication_Latency_EDMS/runnables/: Adder.runnable.yaml  CMakeLists.txt
ros2edms/tutorials/Communication_Latency/Communication_Latency_EDMS/runnables/src/: adder.cpp  consumer.cpp  multiplier.cpp  producer.cpp  subtractor.cpp
ros2edms/tutorials/Communication_Latency/Communication_Latency_ROS2/: Results_ROS2_interprocess.txt  Results_ROS2_intraprocess.txt
ros2edms/tutorials/Communication_Latency/Communication_Latency_ROS2/src/intraprocess_chain/: CMakeLists.txt  package.xml
ros2edms/tutorials/Communication_Latency/Communication_Latency_ROS2/src/intraprocess_chain/src/: multiprocess_executor.cpp
ros2edms/tutorials/Communication_Latency/Communication_Latency_ROS2/src/msgs/: CMakeLists.txt  package.xml
ros2edms/tutorials/Hello_World/: README.md
ros2edms/tutorials/Hello_World/Hello_World_EDMS/: conanfile.py
ros2edms/tutorials/Hello_World/Hello_World_EDMS/activities/: CMakeLists.txt  Consumer.activity.yaml  Producer.activity.yaml
ros2edms/tutorials/Hello_World/Hello_World_ROS2/src/hello_world/: CMakeLists.txt  package.xml
ros2edms/tutorials/Hello_World/Hello_World_ROS2/src/hello_world/src/: publisher.cpp  subscriber.cpp
ros2edms/tutorials/Process_Communication/: README.md
ros2edms/tutorials/Process_Communication/Process_Communication_EDMS/: README.md  Results_EDMS_interprocess.txt  Results_EDMS_intraprocess.txt
ros2edms/tutorials/Process_Communication/Process_Communication_ROS2/: README.md  Results_ROS2_interprocess.txt  Results_ROS2_intraprocess.txt
ros2edms/tutorials/Process_Communication/Process_Communication_ROS2/src/interprocess_chain/: CMakeLists.txt  package.xml
ros2edms/tutorials/Process_Communication/Process_Communication_ROS2/src/interprocess_chain/src/: callback1_node.cpp  callback2_node.cpp  callback3_node.cpp  publisher.cpp  subscriber.cpp
ros2edms/tutorials/Process_Communication/Process_Communication_ROS2/src/intraprocess_chain/: CMakeLists.txt  package.xml
ros2edms/tutorials/Process_Communication/Process_Communication_ROS2/src/intraprocess_chain/src/: multiprocess_executor.cpp
ros2edms/tutorials/Producer_Consumer/: README.md
ros2edms/tutorials/Producer_Consumer/Producer_Consumer_EDMS/: README.md  conanfile.py
ros2edms/tutorials/Producer_Consumer/Producer_Consumer_ROS2/: README.md
(+31 files in other folders)
