<?xml version="1.0"?>
<package format="2">
  <name>interprocess_chain</name>
  <version>0.1.0</version>
  <description>Package for comparing interprocess and intraprocess communication in ROS 2</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_test</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
